<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Inventory App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="inventory_quantity">Quantity: <xliff:g example="100" id="quantity">%1$s</xliff:g></string>
    <string name="inventory_product_name"> Product Name: <xliff:g example="Product Name" id="inventory_product_name">%1$s</xliff:g> </string>
    <string name="inventory_price">Price : <xliff:g example="100" id="price">%1$s</xliff:g></string>

    <string name="inventory_sale_button">SALE</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="supplier_phone">Supplier Phone Number</string>
    <string name="product_quantity">Quantity</string>

    <string name="save_product">Save Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="content_authority">com.example.pavan.inventoryapp</string>


</resources>
